<resources>
    <string name="app_name">cash it</string>
    <string name="title_activity_login">Login</string>
    <string name="email">Email </string>
    <string name="password">Password </string>
    <string name="login"><u>LOGIN</u></string>
    <string name="signup"><u>SIGN UP</u></string>
    <string name="forget_your_password_click_here">Forgot your password ? </string>
    <string name="new_here_create_a_new_account"><u>New here ? Create a new account</u></string>

</resources>
