<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fff"
    tools:context="com.z2p.devops.cashit.Login">


    <ImageView
        android:layout_width="193dp"
        android:layout_height="186dp"
        android:layout_gravity="center"
        android:src="@drawable/college1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/loginandpassword"
        android:visibility="visible"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:id="@+id/useremail"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/email_outline"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/userpassword"
            android:drawableLeft="@drawable/lock_outline"
            />


        <Button

            android:textColor="@color/white"
            android:layout_width="181dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:id="@+id/LoginButton"
            android:text="@string/login"
            android:layout_marginTop="35dp"
            android:textSize="16dp"
            android:background="@color/orange"
            android:layout_marginBottom="30dp"

            />



    </LinearLayout>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"



        >


        <TextView
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_your_password_click_here"
            android:gravity="left"
            android:layout_gravity="center"
            android:layout_marginBottom="11dp"


            android:id="@+id/forgotyouprass" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newaccount"
            android:text="@string/new_here_create_a_new_account"
            android:clickable="true"
            android:layout_gravity="center" />
    </LinearLayout>




</LinearLayout>
